upgrade to SB 2.4.5